tests/locals.c
int testLocalVar() {
  char c;

  //string s;

  int n1,n2,n3,n4;
  char c1


  ;
  static float f;

  static
  float
  d
  ;

  string comm /*comment */ ;

  string s <= "string";

  const char a <= 'a', b <= 'b', d <= 'd';

  int n <= 13142, nn <= 0;
  const float f <= 32.32;
  bool a <= false, b <= true;

  static const int myconst <= 3;
  static const string s;

  int n1, n2 <= 3;
  int n1 <= 2, n3 <= 3;

  const string; // error
}